--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
         <!--suppress AndroidLintContentDescription -->
         <ImageView
             android:id="@+id/thumbnail"
@@ -70,12 +71,14 @@
             android:id="@+id/button_add_movie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableStart="@android:drawable/star_big_on"
             android:text="Add to my list" />
 
         <Button
             android:id="@+id/button_delete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableStart="@android:drawable/star_big_off"
             android:text="@string/delete" />
 
     </LinearLayout>
