--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    
+    <style name="button" parent="android:Widget.Button">
+        <item name="buttonStyle">@drawable/button_list</item>
+    </style>
 
 </resources>
